<resources>
    <string name="app_name">Corrutinas</string>
    <string name="tiempo">Tiempo (segundos)</string>
    <string name="btn_iniciar">Iniciar Temporizador</string>
    <string name="btn_detener">Detener Temporizador</string>
    <string name="titulo">TEMP-POS</string>
    <string name="primos">Calcular Primos</string>
    <string name="c_estado">Cargar Estado</string>
    <string name="t_estado">Estado del temporizador:</string>



</resources>